Fix bugs | Add support 1.16.5 +